--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,16 +35,21 @@
         "margine",
         "marginheight",
         "marginwidth",
+        "Mashaoui",
         "menudisplay",
+        "menufilter",
         "notc",
         "Offersbody",
         "Oneitem",
         "opinionimg",
         "Pargraph",
         "Paymentcss",
+        "paymentrepeater",
+        "Priorty",
         "productcard",
         "Productdetailbody",
         "Removebutton",
+        "repeaternote",
         "Rsection",
         "sadc",
         "Sansation",
