--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,20 +18,29 @@
         "Dashbord",
         "displaydown",
         "displayup",
+        "Dnwagvg",
         "Favourite",
         "felx",
         "firstname",
+        "geolocate",
         "gmap",
+        "Gowd",
         "greenyellow",
         "Happyc",
         "Hasan",
         "Hightlight",
+        "Ijoib",
         "infowindow",
         "jfif",
+        "Jjan",
         "Lsection",
         "Managment",
         "Mangment",
         "Mapbody",
+        "mapbox",
+        "mapboxgl",
+        "maplibre",
+        "maplibregl",
         "margine",
         "marginheight",
         "marginwidth",
@@ -70,9 +79,12 @@
         "Sortbutton",
         "tabel",
         "throught",
+        "tucn",
         "uluru",
         "vsadc",
         "whitesmoke",
-        "XXXL"
+        "Wxsa",
+        "XXXL",
+        "YSIs"
     ]
 }
