--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,10 +26,12 @@
         "gmap",
         "Gowd",
         "greenyellow",
+        "handlesubmit",
         "Happyc",
         "Hasan",
         "Hightlight",
         "Ijoib",
+        "Incss",
         "infowindow",
         "jfif",
         "Jjan",
@@ -54,6 +56,7 @@
         "Pargraph",
         "Paymentcss",
         "paymentrepeater",
+        "popupdiv",
         "Priorty",
         "productcard",
         "Productdetailbody",
@@ -81,6 +84,7 @@
         "throught",
         "tucn",
         "uluru",
+        "Upgradeprofile",
         "vsadc",
         "whitesmoke",
         "Wxsa",
