--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,8 @@
         "Lsection",
         "Managment",
         "Mangment",
+        "manref",
+        "mantoggle",
         "Mapbody",
         "mapbox",
         "mapboxgl",
@@ -66,13 +68,16 @@
         "sadc",
         "Sansation",
         "sbrand",
+        "Sendcode",
         "setcords",
         "setlat",
         "setlng",
+        "setman",
         "setn",
         "setsc",
         "setv",
         "setvs",
+        "setwoman",
         "Shopbody",
         "Shoppin",
         "Shoppingcard",
@@ -87,6 +92,8 @@
         "Upgradeprofile",
         "vsadc",
         "whitesmoke",
+        "womanref",
+        "womantoggle",
         "Wxsa",
         "XXXL",
         "YSIs"
