--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -94,6 +94,7 @@
         "whitesmoke",
         "womanref",
         "womantoggle",
+        "wordflick",
         "Wxsa",
         "XXXL",
         "YSIs"
